[package]
name = "hello_world_grpc"
version = "0.1.0"
authors = ["Daniel Buse <daniel.buse@giga-infosystems.com>"]

[dependencies]

tls-api-native-tls = "0.1"
tls-api = "0.1"
native-tls = "0.1"
httpbis = "0.7"
grpc            = "~0.5"
protobuf        = "~2"
futures         = "~0.1"
futures-cpupool = "~0.1"
